{
  "version": 4,
  "terraform_version": "0.13.7",
  "serial": 28,
  "lineage": "4c5078f1-5899-0f21-56c7-41c47f89c4a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-web-server-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c59411a83c4ceb55",
            "associate_with_private_ip": "10.0.1.5",
            "association_id": "eipassoc-087d558815be75d07",
            "domain": "vpc",
            "id": "eipalloc-0c59411a83c4ceb55",
            "instance": "i-007e47f1c1d804ade",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-01c4654207b478b56",
            "private_dns": "ip-10-0-1-5.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-13-236-218-24.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.236.218.24",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_network_interface.test-web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.test-public-subnet-1",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e040c48614ad1327",
            "arn": "arn:aws:ec2:ap-southeast-2:225883097355:instance/i-007e47f1c1d804ade",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007e47f1c1d804ade",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "syd-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-01c4654207b478b56"
              }
            ],
            "primary_network_interface_id": "eni-01c4654207b478b56",
            "private_dns": "ip-10-0-1-5.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "public_ip": "13.236.218.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b433b6f18a2d61bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a743b57bf7f44ca",
            "tags": {
              "Name": "first ubuntu server"
            },
            "tags_all": {
              "Name": "first ubuntu server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-027aae85552a8d211"
            ]
          },
          "dependencies": [
            "aws_network_interface.test-web-server-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:225883097355:internet-gateway/igw-0c678486b84dc092b",
            "id": "igw-0c678486b84dc092b",
            "owner_id": "225883097355",
            "tags": {
              "Name": "test igw"
            },
            "tags_all": {
              "Name": "test igw"
            },
            "vpc_id": "vpc-0ebac9a2c0839f4b1"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test-web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:225883097355:network-interface/eni-01c4654207b478b56",
            "attachment": [
              {
                "attachment_id": "eni-attach-0afde13fa9d89c720",
                "device_index": 0,
                "instance": "i-007e47f1c1d804ade"
              }
            ],
            "id": "eni-01c4654207b478b56",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:d2:fe:81:02:76",
            "owner_id": "225883097355",
            "private_ip": "10.0.1.5",
            "private_ip_list": [
              "10.0.1.5"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-027aae85552a8d211"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a743b57bf7f44ca"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.test-public-subnet-1",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:225883097355:route-table/rtb-0159abe6aaeed333a",
            "id": "rtb-0159abe6aaeed333a",
            "owner_id": "225883097355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c678486b84dc092b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Test RTB for public igw"
            },
            "tags_all": {
              "Name": "Test RTB for public igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebac9a2c0839f4b1"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-public-rtb-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe611a197f5238dc",
            "route_table_id": "rtb-0159abe6aaeed333a",
            "subnet_id": "subnet-00a743b57bf7f44ca"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_route_table.public-rtb",
            "aws_subnet.test-public-subnet-1",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:225883097355:security-group/sg-027aae85552a8d211",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027aae85552a8d211",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "144.136.36.47/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "144.136.36.47/32"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "225883097355",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_traffic"
            },
            "tags_all": {
              "Name": "allow_web_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebac9a2c0839f4b1"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:225883097355:subnet/subnet-00a743b57bf7f44ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a743b57bf7f44ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225883097355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-subnet"
            },
            "tags_all": {
              "Name": "test-public-subnet"
            },
            "vpc_id": "vpc-0ebac9a2c0839f4b1"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:225883097355:vpc/vpc-0ebac9a2c0839f4b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f9e7b7ab3a3aecb",
            "default_route_table_id": "rtb-03fa41f83492b94bd",
            "default_security_group_id": "sg-09d61ba69c6598722",
            "dhcp_options_id": "dopt-07493c750442a632e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ebac9a2c0839f4b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fa41f83492b94bd",
            "owner_id": "225883097355",
            "tags": {
              "Name": "test vpc"
            },
            "tags_all": {
              "Name": "test vpc"
            }
          }
        }
      ]
    }
  ]
}